<resources>
    <string name="app_name">Maker+</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="font_light">light</string>
    <string name="font_black_italic">black_italic</string>
    <string name="font_bold_italic">bold_italic</string>
    <string name="font_bold">bold</string>
    <string name="font_black">black</string>
    <string name="font_condensed_bold_italic">condensed_bold_italic</string>
    <string name="font_condensed_bold">condensed_bold</string>
    <string name="font_condensed_italic">condensed_italic</string>
    <string name="font_condensed_light_italic">condensed_light_italic</string>
    <string name="font_condensed_light">condensed_light</string>
    <string name="font_condensed_regular">condensed_regular</string>
    <string name="font_italic">italic</string>
    <string name="font_light_italic">light_italic</string>
    <string name="font_medium_italic">medium_italic</string>
    <string name="font_regular">regular</string>
    <string name="font_thin_italic">thin_italic</string>
    <string name="font_thin">thin</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_fullname">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Password (again)</string>
    <string name="title_activity_home">Home</string>
    <string name="string_be_an_engineer">Be an Engineer?</string>
    <string name="string_be_an_engineer_descr">This is for people who are looking for what it takes to be an engineer.</string>
    <string name="string_regional_news">IEEE Regional News</string>
    <string name="string_regional_news_descr">This contains IEEE news specific to your region.</string>
    <string name="string_history">History</string>
    <string name="string_history_descr">This shows people who have done outstanding things in the tech world and features
        those who have contributed immensely to the field of science and tech. </string>
    <string name="string_settings">Settings</string>
    <string name="string_settings_descr">Change the app settings (personalise and own it).</string>
    <string-array name="nav_drawer_items">
        <item>Be an Engineer?</item>
        <item>IEEE Regional News</item>
        <item>History</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_be_engineer">Be An Engineer</string>
    <string name="title_activity_regional_news">Regional News</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="computer_engineering">Computer Sci/Eng</string>
    <string name="electronic_electrical_engineering">Electronic/Electrical</string>
    <string name="chemical_engineering">Chemical</string>
    <string name="mechanical_engineering">Mechanical</string>
    <string name="agricultural_engineering">Agricultural</string>
    <string name="Metallurgy_materials_engineering">Metallurgy and Materials</string>
    <string name="food_engineering">Food Tech</string>
    <string name="civil_engineering">Civil/Contruction</string>
    <string name="aeronautic_engineering">Aeronautics</string>
    <string name="nano_technology">Nanotechnology</string>
    <string name="title_activity_about">About</string>
    <string name="about_me_string"><b>Maker+</b> is an application submitted for the IEEE Mobile Application Development Contest 2015.
        Maker+ was developed by <b>Oyewale Ademola Sao</b> from the IEEE Students branch in Obafemi Awolowo University Ile-Ife.
    </string>
    <string-array name="edu_background">
        <item>Primary education</item>
        <item>Lower secondary education</item>
        <item>Upper secondary education</item>
        <item>Post-secondary non-tertiary education</item>
        <item>Short-cycle tertiary education</item>
        <item>Bachelor or equivalent</item>
        <item>Master or equivalent</item>
        <item>Doctoral or equivalent</item>
    </string-array>
</resources>